--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -1,9 +1,8 @@
 footer {
     position: relative;
-    bottom: 0;
+    bottom: -300px;
     height: 200px;
     width: 100%;
-    margin-top: 100px;
     background-color: rgba(49, 49, 49, 0.904);
     backdrop-filter: blur(20px);
 }
